--- a/src/Navbar/navbar.css
+++ b/src/Navbar/navbar.css
@@ -4,6 +4,62 @@
     justify-content: space-between;
 }
 
+.input {
+    display: flex;
+    flex-direction: row;
+    width: fit-content;
+    /* background-color: #0d1117; */
+    justify-content: center;
+    border-radius: 5px;
+    gap: 7.5px;
+    margin-left: 560px;
+}
+
+.value {
+    background-color: transparent;
+    border: none;
+    padding: 10px;
+    color: white;
+    display: flex;
+    position: relative;
+    gap: 5px;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: all 0.2s ease;
+}
+
+.value:not(:active):hover,
+.value:focus {
+    background-color: #deb092;
+}
+
+.value:focus,
+.value:active {
+    background-color: #deb092;
+    outline: none;
+}
+
+.value::before {
+    content: "";
+    position: absolute;
+    top: 30px;
+    right: 0px;
+    width: 100%;
+    height: 3px;
+    background-color: #7f5539;
+    border-radius: 5px;
+    opacity: 0;
+}
+
+.value:focus::before,
+.value:active::before {
+    opacity: 1;
+}
+
+.value svg {
+    width: 15px;
+}
+
 .navbar__links {
     flex: 1;
     display: flex;
@@ -87,6 +143,7 @@
 
 .navbar__smallscreen-overlay {
     position: fixed;
+    z-index: 20000;
     top: 0;
     left: 0;
     width: 100%;
@@ -207,13 +264,14 @@
 @media screen and (max-width: 660px) {
     .navbar__links {
         display: none;
-        background-color: rgb(4, 4, 53);
 
     }
 
     .navbar__smallscreen {
         display: flex;
+
     }
+
 
 
     .navbar__smallscreen {
@@ -231,7 +289,7 @@
 
     .navbar__smallscreen {
         display: flex;
-        position: sticky;
+        opacity: 0;
     }
 
     .navbar__smallscreen {
